# dernekv1

./: .gitignore  AIDAT_FLOW.md  BADER_FINANCIAL_SEMANTICS.md  DESKTOP_ANALIZ_RAPORU.md  EKSIK_BACKEND_KOMUTLARI.md  EKSIK_SISTEMLER_RAPORU.md  HATA-ANALIZ-RAPORU.md  LICENSE  MODUL_ANALIZ_RAPORU.md  README.md  SISTEM_ANALIZ_RAPORU.md  TODO.md  UI_SISTEMI_STRATEJIK_ANALIZ.md  docker-compose.yml  install.sh  package-lock.json  package.json  update-and-run.sh
desktop/src-tauri/: Cargo.toml  bader.db.backup  schema.sql  tauri.conf.json  uyeler_20260126_125449.xlsx
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 000_create_virmanlar_table.sql  001_add_missing_columns.sql  002_add_aile_uyeleri.sql  003_add_gelir_gider_turleri.sql  004_add_koy_virmanlar.sql  005_add_belgeler.sql  006_extend_form_fields.sql  007_create_licenses_table.sql  008_add_sync_fields.sql  009_add_butce_gerceklesen_columns.sql  010_create_toplantilar_etkinlikler.sql  011_demirbaslar.sql  012_vadeli_islemler.sql  013_cariler.sql  014_aidat_tanimlari.sql  015_soft_delete.sql  016_aile_uyeleri_genisletme.sql  017_demirbas_gider_entegrasyonu.sql  017_kasa_genisletme.sql  018_aidat_uye_turu_fiyat.sql  019_kurlar.sql  020_add_license_platform_flags.sql  020_evrak_sistemi.sql  021_butce_donem.sql  022_koy_tablolari.sql  023_uye_iliskileri.sql  024_login_attempts.sql  025_aidat_version_column.sql  026_aidat_tanim_fk.sql  027_migrate_tur_to_id.sql  028_soft_delete_columns.sql  029_kullanici_gorunumleri.sql  030_demirbas_gider_turu.sql  (+3 more)
(+503 files in other folders)
